--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ jsonwebtoken = "8"
 chrono = { version = "0.4", features = ["serde"] }
 bcrypt = "0.15"
 r2d2 = "0.8"
+actix-web-httpauth = "0.8"
 
 [dev-dependencies]
 fake = { version = "2.4", features = ["derive"] }
